# ibkr-framework

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
examples/: account_overview.py  attach_stop.py  place_order.py
ibkr/: __init__.py
ibkr/account/: __init__.py  order_tracker.py  pnl.py  positions.py  summary.py
ibkr/config/: __init__.py  client_ids.py  exchanges.py  order_types.py
ibkr/core/: __init__.py  connection.py  contracts.py  errors.py  orders.py
ibkr/execution/: __init__.py  base_executor.py  bracket.py  fill_monitor.py  order_router.py  strategy_config.py
ibkr/tests/: test_base_executor_exit_persist.py  test_connection_callbacks.py  test_connection_disconnect_race.py  test_contract_cache.py  test_executor_idempotent.py  test_fill_monitor.py  test_hold_guard.py  test_phase_orchestration.py  test_positions_filter.py  test_process_results.py  test_signal_processing.py
ibkr/tests/integration/: _common.py  cleanup.py  level2_connection.py  level3_ticks.py  level7_round_trip.py  level9_bracket.py
ibkr/utils/: __init__.py  logging_setup.py  order_ref.py  price_patch.py
